<resources>
    <string name="text_box_hint_tag">Title:</string>
    <string name="text_box_hint_description">Description</string>
    <string name="text_box_hint_amount">Amount</string>
    <string name="app_name">Task Manager</string>
    <string name="logo">App logo</string>
    <string name="text_view_get_started">Get Started</string>
    <string name="text_view_create_group">Create a group</string>
    <string name="text_view_group_name">Group Name</string>
    <string name="button_start">Start</string>
    <string name="button_get_started">GET STARTED</string>
    <string name="text_view_show_message">message</string>
    <string name="button_confirmation">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="Add_New_User">User registration</string>
    <string name="delete_User">Delete a User</string>
    <string name="groupName">Name</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create_users">Add User</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="task_list">Available tasks: </string>
    <string name="empty_list_text">Empty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_user">Edit user</string>
    <string name="delete_user">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="choose_a_group">Group selection</string>
    <string name="task_user_post">Posted by:</string>
    <string name="task_tag">Title:</string>
    <string name="task_point_amount">Points: </string>
    <string name="task_description">Task Description: </string>
    <string name="text_view_res">Resources: </string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
    </string-array>

    <string-array name="list_chapters">
        <item>Chapter 1</item>
        <item>Chepter 2</item>
        <item>Chapter 3</item>
        <item>Chapter 4</item>
        <item>Chapter 5</item>
        <item>Chapter 6</item>
        <item>Chapter 7</item>
        <item>Chapter 8</item>
        <item>Chapter 9</item>
        <item>Chapter 10</item>
    </string-array>
    <string name="title_activity_group_selection">GroupSelection</string>
    <string name="add_ressources">Add ressources</string>
    <string name="title_activity_ressource_selection">ressource_selection</string>
</resources>
