<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.taskmanager.Display.GroupConfirmation">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="60sp" />

            <TextView
                android:id="@+id/txtViewShwMssg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_view_show_message"
                android:textColor="#515151"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirmation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:onClick="onConfirmation"
                    android:text="@string/button_confirmation"
                    android:textColor="#32CD32"
                    android:textSize="24sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:onClick="onCancel"
                    android:text="@string/button_cancel"
                    android:textColor="#32CD32"
                    android:textSize="24sp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="60sp" />
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
