<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E8E8E8"
                android:orientation="horizontal"
                android:paddingBottom="25sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="25sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/staticPostingUer"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5sp"
                        android:text="@string/task_user_post"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/postingUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="THEUSERPOST"
                        android:textColor="@color/colorNavyBlue"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/staticPointAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5sp"
                        android:text="@string/task_point_amount"
                        android:textColor="@android:color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/pointAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="THEPOINTS"
                        android:textColor="@color/colorNavyBlue"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="20sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="20sp">

                <TextView
                    android:id="@+id/staticTag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingRight="5sp"
                    android:text="@string/text_box_hint_tag"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TAG"
                    android:textColor="@color/colorNavyBlue"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/staticTaskDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/task_description"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/taskDescription2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5sp"
                    android:text="TASKDESCRIPTION"
                    android:textColor="@color/colorNavyBlue"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="30sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="30sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Completed by:"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <Spinner
                    android:id="@+id/spinnerCompleteTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="5" />
            </LinearLayout>

        </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:onClick="onCompleteTask"
        android:paddingBottom="10sp"
        android:paddingTop="10sp"
        app:srcCompat="@drawable/checkmark"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="519dp" />

    </LinearLayout>
